@startuml
'https://plantuml.com/class-diagram

abstract class ConsoleManager
abstract class Console
class Cmd
class Terminal

Console <|-- Cmd
Console <|-- Terminal
Console o-- ConsoleManager


Console : #coreCommand
Console : -userCommand
Console : +getCommand()
Console : +getCommandTokens()
Console : +setUserCommand()
ConsoleManager : +getConsole()


@enduml